# lightdm-startos-greeter

./: AUTHORS  LICENSE  Makefile.am  README.md
src/: Makefile.am  Makefile.in  main.c  startos-greeter-helper.py.in  ui.c
